tests/suite/fail/generated/types/fail_ge_i32_string.ny
fn main() {
    let _ = 1 >= "a" //~ ERROR type mismatch in `comparison` operation
}
